added two randomize functions

--- a/RDIP/Codes/page.html
+++ b/RDIP/Codes/page.html
@@ -15,7 +15,7 @@
     <br>
     <div id="FORM_SENTENCES_2">
     <div id="selectLanguage" style="text-align:center">
-    <select name="lang" autocomplete="off" onchange="getOption();">
+    <select name="lang" autocomplete="off" onchange="getOption(this.value);">
     <option value="null">---Select Language---</option>
     <option value="english" >English</option>
     <option value="hindi" >Hindi</option>
