added functionality to reform the sentence button

--- a/RDIP/Codes/page.html
+++ b/RDIP/Codes/page.html
@@ -33,7 +33,11 @@
 
 <br>
 <br>
-<div id = 'but' style="padding-left: 270px;" >
+<div id = 'but' style="position: absolute;
+top: 50%;
+left: 50%;
+margin-right: -50%;
+transform: translate(-50%, -50%)" >
 
 <!-- <button id = "1" class = 'button' value = "" onclick = "buttonaction(this.value)" ></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button id = "2" class = 'button' onclick = "buttonaction(this.value)" ></button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -51,7 +55,7 @@
 <br>
 <br>
 
-<div id = "final" style = "margin-left: 25%;">
+<div id = "final" style = "margin-left: 25%;" >
 
 </div>
     
