check the correctness is functional

--- a/RDIP/Codes/page.html
+++ b/RDIP/Codes/page.html
@@ -58,6 +58,11 @@ transform: translate(-50%, -50%)" >
 <div id = "final" style = "margin-left: 25%;" >
 
 </div>
-    
+<br>
+<br>
+  
+<div id = "ans" style = "margin-left: 25%;" >
+
+</div>
     </body>
     </html>
