--- a/RDIP/Codes/page.html
+++ b/RDIP/Codes/page.html
@@ -64,5 +64,6 @@ transform: translate(-50%, -50%)" >
 <div id = "ans" style = "margin-left: 25%;" >
 
 </div>
+<div id = "ans2"></div>
     </body>
     </html>
